Fixed horizontal scroll

--- a/styles/light.css
+++ b/styles/light.css
@@ -6,9 +6,9 @@
 
 .page.theme_light {
   --brand-color: #ffc2e6;
-  --accent-color: #ff8dcb;
+  --accent-color: #353430;
   --text-color: #353430;
-  --title-color: #353430;
+  --title-decor-color: #ff8dcb;
   --subtitle-color: #353430;
   --theme-btn-color: #353430;
   --theme-btn-hvr-color: rgba(50, 49, 45, 0.4);
@@ -24,9 +24,9 @@
 @media (prefers-color-scheme: light) {
   .page {
     --brand-color: #ffc2e6;
-    --accent-color: #ff8dcb;
+    --accent-color: #353430;
     --text-color: #353430;
-    --title-color: #353430;
+    --title-decor-color: #ff8dcb;
     --subtitle-color: #353430;
     --theme-btn-color: #353430;
     --theme-btn-hvr-color: rgba(50, 49, 45, 0.4);
