--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@
 
   background-color: var(--background-color);
 
-  font-family: var(--font), monospace;
+  font-family: var(--font), monospace, sans-serif;
   font-size: 18px;
   line-height: 1.3;
 }
@@ -93,7 +93,7 @@
   background-color: transparent;
   padding: 3px 13px;
   text-transform: lowercase;
-  font-family: var(--font);
+  font-family: var(--font), monospace, sans-serif;
   color: var(--theme-btn-color);
   line-height: 1;
   text-align: center;
@@ -142,7 +142,7 @@
 }
 
 .title-decor {
-  background-color: var(--accent-color);
+  background-color: var(--title-decor-color);
 }
 
 .text-link {
@@ -151,7 +151,7 @@
 }
 
 .text-link:focus {
-  outline: none;
+  outline: 1px solid currentColor;
 }
 
 .text-link:focus-visible {
@@ -170,7 +170,7 @@
 }
 
 .content-section__title {
-  color: var(--title-color);
+  color: var(--accent-color);
   font-size: 18px;
   font-weight: bold;
   line-height: calc(23.4 / 18);
@@ -265,7 +265,7 @@ h4.content-section__subtitle {
   text-shadow: 3px 3px 0 #ff0070;
 }
 
-@media (width > 375px) {
+@media (width >= 768px) {
   .header {
     padding: 20px;
     padding-inline-start: 0;
@@ -283,7 +283,7 @@ h4.content-section__subtitle {
   }
 
   .header__title {
-    inline-size: calc(50% - 10px);
+    inline-size: max(355px, calc(50% - 10px));
     justify-self: end;
   }
 
@@ -323,7 +323,7 @@ h4.content-section__subtitle {
   }
 }
 
-@media (width > 768px) {
+@media (width >= 1024px) {
   .page {
     --logo-font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
