--- a/styles/variables.css
+++ b/styles/variables.css
@@ -13,7 +13,7 @@
   --theme-btn-hvr-color: rgba(255, 0, 112, 0.4);
   --background-color: #000028;
 
-  --font: "IBM Plex mono", monospace, sans-serif;
+  --font: "IBM Plex mono";
   --logo-font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
 
   --background-image: url(../images/cover-image-dark.png);
